Se implementaron los métodos necesarios para realizar las operaciones en el Backend, al igual que las vistas en el Fronted. Se optó por separar las vistas en 3 páginas distintas: una para ver el listado de cuentas ACTIVAS o SUSPENDIDAS, otra página que sirve de formulario (edición y creación), y otra para ver el detalle de una cuenta existente.

--- a/servisoft/src/main/resources/application.properties
+++ b/servisoft/src/main/resources/application.properties
@@ -1,17 +1,22 @@
 spring.application.name=servisoft
 
-#      CONFIGURACIÓN PARA POSTGRESQL
+#CONFIGURACIÓN PARA POSTGRESQL
 
 # URL de conexión.
 spring.datasource.url=jdbc:postgresql://localhost:5432/FACTURACION
 
-#usuario y contraseña de PostgreSQL
+# Usuario y contraseña de PostgreSQL
 spring.datasource.username=AdminFacturacion
 spring.datasource.password=admin
 
 # Le dice a Hibernate cómo generar y actualizar las tablas automáticamente.
-# "update" modifica las tablas si cambia tu código, sin borrar datos.
+# "update" modifica las tablas si cambia el código, sin borrar datos.
 spring.jpa.hibernate.ddl-auto=update
 
-# Opcional pero recomendado: Especifica el "dialecto" de SQL para PostgreSQL.
+# Especifica el "dialecto" de SQL para PostgreSQL.
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+# Thymeleaf
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+spring.thymeleaf.cache=false
