--- a/servisoft/src/main/resources/application.properties
+++ b/servisoft/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=servisoft
 #CONFIGURACIÓN PARA POSTGRESQL
 
 # URL de conexión.
-spring.datasource.url=jdbc:postgresql://localhost:5432/FACTURACION
+spring.datasource.url=jdbc:postgresql://localhost:5432/FACTURACION2
 
 # Usuario y contraseña de PostgreSQL
 spring.datasource.username=AdminFacturacion
